--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -30,3 +30,13 @@ dbengine_multihost_disk_space: 2048
 # `static-threaded` if you want to keep it running. Read more:
 # https://learn.netdata.cloud/docs/configure/secure-nodes
 web_mode: none
+
+# Defines if Netdata should store data in a backend
+netdata_configure_archive: false
+
+# Define configuration for health_alarm_notify.conf.
+# Example:
+# netdata_health_alarm_notify_configs:
+#   https_proxy: http://localhost:3128
+#   SLACK_WEBHOOK_URL: https://hooks.slack.com/...
+netdata_alarm_notify_configs: {}
